# Bitmap

./: .gitmodules  CMakeLists.txt  Doxyfile  Doxyfile.in
cmake/: BitmapConfig.cmake.in
include/Bitmap/: Bitmap.h  Palette.h  PalettizedBitmap.h  Pixel.h  Pixel8.h
src/: Pixel.cpp
test/: CMakeLists.txt  test-Bitmap.cpp
